feat: Update VerificationPage, Terms of Service and Footer
- Remove file upload functionality from VerificationPage
- Add contact information (verification@youdu.ae, support@youdu.ae)
- Add full Terms of Service content in Russian
- Add Terms of Service link to footer next to Privacy Policy
- Update About Us link to point to /p/about
- Add translations for new content (RU/EN)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -404,7 +404,7 @@
   "EmailVerificationPage.title": "Verify your email address",
   "VerificationPage.title": "Account Verification",
   "VerificationPage.schemaTitle": "Account Verification | {marketplaceName}",
-  "VerificationPage.description": "Get verified and build trust with other users. Upload your government-issued ID or business license.",
+  "VerificationPage.description": "Get verified and build trust with other users.",
   "VerificationPage.badgeExample": "You'll get a verified badge:",
   "VerificationPage.documentTypeLabel": "Document type",
   "VerificationPage.documentTypePassport": "Passport",
@@ -425,6 +425,8 @@
   "VerificationPage.pendingReview": "Documents submitted - Under review",
   "VerificationPage.pendingReviewDescription": "Your documents are currently being reviewed by our team. We'll notify you once the verification is complete (typically within 24-48 hours).",
   "VerificationPage.reuploadButton": "Upload different documents",
+  "VerificationPage.howToVerify": "To get verified, please contact our service via email: verification@youdu.ae{br}{br}We will review your documents and activate the verification badge on your profile.{br}{br}Verification fee: 1000 AED",
+  "VerificationPage.contactSupport": "Contact support: support@youdu.ae (response within 24 hours)",
   "FetchLineItemsError.providerCommissionBiggerThanMinPrice": "This listing is currently unavailable. Please contact support.",
   "FetchLineItemsError.unknownError": "Oops, something went wrong. Please refresh the page and try again.",
   "FieldBoolean.no": "No",
@@ -1315,6 +1317,7 @@
   "LandingPage.blogName3": "How to Choose a Tutor",
   "LandingPage.blogButton": "View All Articles",
   "FooterCustom.about": "About Us",
+  "FooterCustom.termsOfService": "Terms of Service",
   "FooterCustom.forExecutors": "For Executors",
   "FooterCustom.contacts": "Contacts",
   "FooterCustom.support": "Support Service",
