--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -404,7 +404,7 @@
   "EmailVerificationPage.title": "Verify your email address",
   "VerificationPage.title": "Верификация аккаунта",
   "VerificationPage.schemaTitle": "Верификация аккаунта | {marketplaceName}",
-  "VerificationPage.description": "Пройдите верификацию и повысьте доверие других пользователей. Загрузите ваш документ, удостоверяющий личность, или бизнес-лицензию.",
+  "VerificationPage.description": "Пройдите верификацию и повысьте доверие других пользователей.",
   "VerificationPage.badgeExample": "Вы получите значок верификации:",
   "VerificationPage.documentTypeLabel": "Тип документа",
   "VerificationPage.documentTypePassport": "Паспорт",
@@ -425,6 +425,8 @@
   "VerificationPage.pendingReview": "Документы отправлены - На проверке",
   "VerificationPage.pendingReviewDescription": "Ваши документы в данный момент проверяются нашей командой. Мы уведомим вас, как только верификация будет завершена (обычно в течение 24-48 часов).",
   "VerificationPage.reuploadButton": "Загрузить другие документы",
+  "VerificationPage.howToVerify": "Для прохождения верификации, пожалуйста, свяжитесь с нашей службой через почту: verification@youdu.ae{br}{br}Мы проверим ваши документы и активируем значок верификации в Вашем профиле.{br}{br}Стоимость верификации составляет 1000 AED",
+  "VerificationPage.contactSupport": "Связаться с поддержкой: support@youdu.ae (ответ в течение 24 часов)",
   "FetchLineItemsError.providerCommissionBiggerThanMinPrice": "This listing is currently unavailable. Please contact support.",
   "FetchLineItemsError.unknownError": "Oops, something went wrong. Please refresh the page and try again.",
   "FieldBoolean.no": "No",
@@ -1351,6 +1353,7 @@
   "LandingPage.blogName3": "Как выбрать репетитора",
   "LandingPage.blogButton": "Посмотреть все статьи",
   "FooterCustom.about": "О нас",
+  "FooterCustom.termsOfService": "Пользовательское соглашение",
   "FooterCustom.forExecutors": "Исполнителям",
   "FooterCustom.contacts": "Контакты",
   "FooterCustom.support": "Служба поддержки",
