Localize account settings navigation and hide payout tabs

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -148,8 +148,8 @@
   "ContactDetailsForm.resetPasswordLinkText": "Send reset instructions.",
   "ContactDetailsForm.saveChanges": "Save changes",
   "ContactDetailsForm.tooManyVerificationRequests": "Too many verification requests have been sent for this email.",
-  "ContactDetailsPage.heading": "Contact details",
-  "ContactDetailsPage.title": "Contact details",
+  "ContactDetailsPage.heading": "Контактная информация",
+  "ContactDetailsPage.title": "Контактная информация",
   "CustomExtendedDataField.placeholderBoolean": "Select…",
   "CustomExtendedDataField.placeholderLong": "Add number",
   "CustomExtendedDataField.placeholderSingleSelect": "Select…",
@@ -525,8 +525,8 @@
   "KeywordFilter.placeholder": "Введите ключевое слово (название или описание)…",
   "LandingPage.schemaDescription": "An online marketplace.",
   "LandingPage.schemaTitle": "{marketplaceName}",
-  "LayoutWrapperAccountSettingsSideNav.contactDetailsTabTitle": "Contact details",
-  "LayoutWrapperAccountSettingsSideNav.passwordTabTitle": "Password",
+  "LayoutWrapperAccountSettingsSideNav.contactDetailsTabTitle": "Контактная информация",
+  "LayoutWrapperAccountSettingsSideNav.passwordTabTitle": "Пароль",
   "LayoutWrapperAccountSettingsSideNav.verificationTabTitle": "Верификация",
   "LayoutWrapperAccountSettingsSideNav.paymentMethodsTabTitle": "Payment methods",
   "LayoutWrapperAccountSettingsSideNav.paymentsTabTitle": "Payout details",
@@ -1266,8 +1266,8 @@
   "UserCard.viewProfileLink": "View profile",
   "UserDisplayName.banned": "Banned user",
   "UserDisplayName.deleted": "Deleted user",
-  "UserNav.accountSettings": "Account settings",
-  "UserNav.profileSettings": "Profile settings",
+  "UserNav.accountSettings": "Настройки аккаунта",
+  "UserNav.profileSettings": "Настройки профиля",
   "UserNav.yourListings": "Your listings",
   "InboxPage.assignment-flow-v3.inquiry.status": "Открыть чат с заказчиком",
   "InboxPage.assignment-flow-v3.accepted.status": "Работа в процессе",
