Localize profile settings form content

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -813,35 +813,38 @@
   "ProfilePage.reviewsAsACustomerTitle": "Отзывы ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Reviews from customers ({count})",
   "ProfilePage.schemaTitle": "{name} | {marketplaceName}",
-  "ProfileSettingsForm.addYourProfilePicture": "+ Add your profile picture…",
-  "ProfileSettingsForm.addYourProfilePictureMobile": "+ Add",
-  "ProfileSettingsForm.bioHeading": "Your profile bio",
-  "ProfileSettingsForm.bioInfo": "{marketplaceName} is built on relationships. Help other people get to know you.",
-  "ProfileSettingsForm.bioLabel": "Bio",
-  "ProfileSettingsForm.bioPlaceholder": "Tell us a little bit about yourself…",
+"ProfileSettingsForm.addYourProfilePicture": "+ Добавьте фотографию профиля…",
+"ProfileSettingsForm.addYourProfilePictureMobile": "+ Добавить",
+"ProfileSettingsForm.bioHeading": "Описание вашего профиля",
+"ProfileSettingsForm.bioInfo": "Торговая площадка {marketplaceName} основана на взаимоотношениях. Помогайте другим людям лучше узнать вас.",
+"ProfileSettingsForm.bioLabel": "",
+"ProfileSettingsForm.bioPlaceholder": "Расскажите нам немного о себе…",
   "ProfileSettingsForm.changeAvatar": "Change",
-  "ProfileSettingsForm.displayNameHeading": "Your display name",
-  "ProfileSettingsForm.displayNameInfo": "The display name defaults to first name plus initial of last name.",
-  "ProfileSettingsForm.displayNameLabel": "Display name",
-  "ProfileSettingsForm.displayNamePlaceholder": "Jane D",
+"ProfileSettingsForm.displayNameHeading": "Организация или никнейм",
+"ProfileSettingsForm.displayNameInfo": "Отображаемое имя по умолчанию равно имени плюс инициалу фамилии.",
+"ProfileSettingsForm.displayNameLabel": "",
+"ProfileSettingsForm.displayNamePlaceholder": "Иван И",
   "ProfileSettingsForm.displayNameRequired": "This field is required.",
-  "ProfileSettingsForm.fileInfo": ".JPG or .PNG. Max. 20 MB",
-  "ProfileSettingsForm.firstNameLabel": "First name",
-  "ProfileSettingsForm.firstNamePlaceholder": "Jane",
+"ProfileSettingsForm.fileInfo": ".JPG или .PNG. Размер не более 20 МБ",
+"ProfileSettingsForm.firstNameLabel": "Имя",
+"ProfileSettingsForm.firstNamePlaceholder": "Иван",
   "ProfileSettingsForm.firstNameRequired": "This field is required.",
   "ProfileSettingsForm.imageUploadFailed": "Oops, something went wrong. Please check that the image file isn't too big and try again.",
   "ProfileSettingsForm.imageUploadFailedFileTooLarge": "Image file is too big. Maximum size is 20 MB.",
-  "ProfileSettingsForm.lastNameLabel": "Last name",
-  "ProfileSettingsForm.lastNamePlaceholder": "Doe",
+"ProfileSettingsForm.lastNameLabel": "Фамилия",
+"ProfileSettingsForm.lastNamePlaceholder": "Иванов",
   "ProfileSettingsForm.lastNameRequired": "This field is required.",
-  "ProfileSettingsForm.saveChanges": "Save changes",
-  "ProfileSettingsForm.tip": "Tip: Use a photo where your face is recognizable.",
+"ProfileSettingsForm.saveChanges": "Сохранить изменения",
+"ProfileSettingsForm.tip": "Совет: используйте фотографию, на которой ваше лицо узнаваемо.",
   "ProfileSettingsForm.updateProfileFailed": "Oops, something went wrong. Please try again.",
-  "ProfileSettingsForm.yourName": "Your name",
-  "ProfileSettingsForm.yourProfilePicture": "Your profile picture",
-  "ProfileSettingsPage.heading": "Profile settings",
-  "ProfileSettingsPage.title": "Profile settings",
-  "ProfileSettingsPage.viewProfileLink": "View your profile",
+"ProfileSettingsForm.yourName": "",
+"ProfileSettingsForm.yourProfilePicture": "Ваша фотография в профиле",
+"ProfileSettingsForm.socialNetwork": "Социальные сети",
+"ProfileSettingsForm.socialInstagram": "Instagram",
+"ProfileSettingsForm.socialWebsite": "Сайт",
+"ProfileSettingsPage.heading": "Настройки профиля",
+"ProfileSettingsPage.title": "Настройки профиля",
+"ProfileSettingsPage.viewProfileLink": "Просмотрите свой публичный профиль",
   "IntegerRangeFilter.labelSelectedPlain": "{minValue} - {maxValue}",
   "IntegerRangeFilter.rangeInputsLabel": "Range:",
   "IntegerRangeFilter.screenreader.rangeHandle": "{handle, select, min {Range start {value}} other {Range end {value}}}",
