--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -836,6 +836,9 @@
   "ProfileSettingsForm.updateProfileFailed": "Oops, something went wrong. Please try again.",
   "ProfileSettingsForm.yourName": "Your name",
   "ProfileSettingsForm.yourProfilePicture": "Your profile picture",
+"ProfileSettingsForm.socialNetwork": "Social network",
+"ProfileSettingsForm.socialInstagram": "Instagram",
+"ProfileSettingsForm.socialWebsite": "Website",
   "ProfileSettingsPage.heading": "Profile settings",
   "ProfileSettingsPage.title": "Profile settings",
   "ProfileSettingsPage.viewProfileLink": "View your profile",
