--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -422,6 +422,8 @@
   "VerificationPage.uploadSuccess": "Documents uploaded successfully! We'll review them within 24-48 hours.",
   "VerificationPage.alreadyVerified": "You're verified!",
   "VerificationPage.alreadyVerifiedDescription": "Your account has been verified. You now have a verified badge on your profile.",
+  "VerificationBadge.label": "Verified",
+  "VerificationBadge.tooltip": "User documents (Trade License, passport and Emirates ID) were reviewed by the YouDu team.",
   "VerificationPage.pendingReview": "Documents submitted - Under review",
   "VerificationPage.pendingReviewDescription": "Your documents are currently being reviewed by our team. We'll notify you once the verification is complete (typically within 24-48 hours).",
   "VerificationPage.reuploadButton": "Upload different documents",
@@ -803,7 +805,13 @@
   "ProfilePage.detailsTitle": "Details",
   "ProfilePage.editProfileLinkDesktop": "Edit profile",
   "ProfilePage.editProfileLinkMobile": "Edit profile",
-  "ProfilePage.listingsTitle": "My listings ({count})",
+  "ProfilePage.openListingsTitle": "Active jobs ({count})",
+  "ProfilePage.completedListingsTitle": "Completed jobs ({count})",
+  "ProfilePage.rating": "Profile rating",
+  "ProfilePage.completedTasks": "Completed jobs",
+  "ProfilePage.proposedTasks": "Jobs you posted",
+  "ProfilePage.emptyOpenListings": "Your active jobs will appear here once you publish a request.",
+  "ProfilePage.emptyCompletedListings": "Completed jobs will show up here after you finish your first tasks.",
   "ProfilePage.loadingDataFailed": "Oops, something went wrong. Please try again.",
   "ProfilePage.loadingReviewsFailed": "Loading reviews failed.",
   "ProfilePage.mobileHeading": "{name}",
@@ -1307,6 +1315,9 @@
   "LandingPage.category.transport": "Freight Transportation",
   "LandingPage.category.electronics": "Electronics Repair",
   "LandingPage.category.auto": "Auto Services",
+  "LandingPage.category.interior": "Interior Designer",
+  "LandingPage.category.tourist": "Tourist Services",
+  "LandingPage.category.web": "Web Design / SEO",
   "LandingPage.howItWorksTitle": "How it Works",
   "LandingPage.howItWorksCard1Title": "Describe the task and conditions",
   "LandingPage.howItWorksCard1Text": "We will ask you a few questions so that the specialist can evaluate the upcoming work",
@@ -1347,5 +1358,8 @@
   "ServiceCategory.courier": "Courier Services",
   "ServiceCategory.moving": "Moving and Transportation",
   "ServiceCategory.techRepair": "Digital Tech Repair",
-  "ServiceCategory.auto": "Automotive Services"
+  "ServiceCategory.auto": "Automotive Services",
+  "ServiceCategory.interior": "Interior Designer",
+  "ServiceCategory.tourist": "Tourist Services",
+  "ServiceCategory.web": "Web Design/SEO"
 }
