--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -422,6 +422,8 @@
   "VerificationPage.uploadSuccess": "Документы успешно загружены! Мы проверим их в течение 24-48 часов.",
   "VerificationPage.alreadyVerified": "Вы верифицированы!",
   "VerificationPage.alreadyVerifiedDescription": "Ваш аккаунт был верифицирован. Теперь у вас есть значок верификации в профиле.",
+  "VerificationBadge.label": "Verified",
+  "VerificationBadge.tooltip": "Данные пользователя (лицензия, паспорт и Emirates ID) проверены командой YouDu.",
   "VerificationPage.pendingReview": "Документы отправлены - На проверке",
   "VerificationPage.pendingReviewDescription": "Ваши документы в данный момент проверяются нашей командой. Мы уведомим вас, как только верификация будет завершена (обычно в течение 24-48 часов).",
   "VerificationPage.reuploadButton": "Загрузить другие документы",
@@ -803,12 +805,16 @@
   "ProfilePage.detailsTitle": "Details",
   "ProfilePage.editProfileLinkDesktop": "Редактировать профиль",
   "ProfilePage.editProfileLinkMobile": "Редактировать профиль",
-  "ProfilePage.listingsTitle": "My listings ({count})",
+  "ProfilePage.openListingsTitle": "Текущие задания ({count})",
+  "ProfilePage.completedListingsTitle": "Завершённые задания ({count})",
   "ProfilePage.loadingDataFailed": "Oops, something went wrong. Please try again.",
   "ProfilePage.loadingReviewsFailed": "Loading reviews failed.",
   "ProfilePage.mobileHeading": "{name}",
   "ProfilePage.rating": "Рейтинг профиля",
   "ProfilePage.completedTasks": "Количество выполненных работ",
+  "ProfilePage.proposedTasks": "Количество предложенных заданий",
+  "ProfilePage.emptyOpenListings": "Здесь будут отображаться активные задания. Создайте новое задание, чтобы найти исполнителя.",
+  "ProfilePage.emptyCompletedListings": "Завершённые задания появятся здесь после закрытия первых работ.",
   "ProfilePage.memberSince": "Дата регистрации",
   "ProfilePage.reviewsAsACustomerTitle": "Отзывы ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Reviews from customers ({count})",
@@ -1268,7 +1274,7 @@
   "UserCard.contactUser": "Contact",
   "UserCard.heading": "Hello, I'm {name}.",
   "UserCard.showFullBioLink": "more",
-  "UserCard.viewProfileLink": "View profile",
+  "UserCard.viewProfileLink": "Посмотреть профиль",
   "UserDisplayName.banned": "Banned user",
   "UserDisplayName.deleted": "Deleted user",
   "UserNav.accountSettings": "Настройки аккаунта",
@@ -1343,6 +1349,9 @@
   "LandingPage.category.transport": "Грузоперевозки",
   "LandingPage.category.electronics": "Ремонт цифровой техники",
   "LandingPage.category.auto": "Автомобильные услуги",
+  "LandingPage.category.interior": "Дизайнер интерьеров",
+  "LandingPage.category.tourist": "Туристические услуги",
+  "LandingPage.category.web": "Веб дизайн / SEO",
   "LandingPage.howItWorksTitle": "Как это работает",
   "LandingPage.howItWorksCard1Title": "Опишите задачу и условия",
   "LandingPage.howItWorksCard1Text": "Мы зададим несколько вопросов вам, чтобы специалист смог оценить предстоящую работу",
@@ -1383,5 +1392,8 @@
   "ServiceCategory.courier": "Курьерские услуги",
   "ServiceCategory.moving": "Грузоперевозки",
   "ServiceCategory.techRepair": "Ремонт цифровой техники",
-  "ServiceCategory.auto": "Автомобильные услуги"
+  "ServiceCategory.auto": "Автомобильные услуги",
+  "ServiceCategory.interior": "Дизайнер интерьеров",
+  "ServiceCategory.tourist": "Туристические услуги",
+  "ServiceCategory.web": "Веб Дизайн/SEO"
 }
