Add Welcome Page with role-based onboarding for Customer and Provider

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1374,5 +1374,29 @@
   "ServiceCategory.auto": "Automotive Services",
   "ServiceCategory.interior": "Interior Designer",
   "ServiceCategory.tourist": "Tourist Services",
-  "ServiceCategory.web": "Web Design/SEO"
+  "ServiceCategory.web": "Web Design/SEO",
+  "WelcomePage.title": "Welcome",
+  "WelcomePage.schemaTitle": "Welcome to YouDu",
+  "WelcomePage.defaultName": "there",
+  "WelcomePage.welcomeTitle": "Welcome, {name}!",
+  "WelcomePage.subtitle": "You've successfully joined YouDu. Here's how to get started:",
+  "WelcomePage.providerGuideTitle": "How to create your first task",
+  "WelcomePage.providerStep1Title": "Create a detailed task",
+  "WelcomePage.providerStep1Description": "Describe what you need, set your budget, add photos, and specify the location on the map.",
+  "WelcomePage.providerStep2Title": "Review proposals from specialists",
+  "WelcomePage.providerStep2Description": "Verified specialists will send their proposals with prices and timelines. Compare and choose the best offer.",
+  "WelcomePage.providerStep3Title": "Manage your task",
+  "WelcomePage.providerStep3Description": "Communicate via chat, track progress, and leave a review after completion.",
+  "WelcomePage.customerGuideTitle": "How to find tasks",
+  "WelcomePage.customerStep1Title": "Browse available tasks",
+  "WelcomePage.customerStep1Description": "Explore tasks in your service categories. Use filters to find tasks that match your skills and location.",
+  "WelcomePage.customerStep2Title": "Send your proposal",
+  "WelcomePage.customerStep2Description": "Offer your price and timeline. Verified specialists get priority, so complete your profile verification!",
+  "WelcomePage.customerStep3Title": "Get selected and complete the task",
+  "WelcomePage.customerStep3Description": "Once selected, communicate with the client, complete the work, and receive your payment and reviews.",
+  "WelcomePage.createFirstTask": "Create your first task",
+  "WelcomePage.viewMyTasks": "View my tasks",
+  "WelcomePage.findTasks": "Find tasks",
+  "WelcomePage.completeProfile": "Complete your profile",
+  "WelcomePage.skipToHome": "Skip to homepage"
 }
