--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1408,5 +1408,29 @@
   "ServiceCategory.auto": "Автомобильные услуги",
   "ServiceCategory.interior": "Дизайнер интерьеров",
   "ServiceCategory.tourist": "Туристические услуги",
-  "ServiceCategory.web": "Веб Дизайн/SEO"
+  "ServiceCategory.web": "Веб Дизайн/SEO",
+  "WelcomePage.title": "Добро пожаловать",
+  "WelcomePage.schemaTitle": "Добро пожаловать в YouDu",
+  "WelcomePage.defaultName": "вас",
+  "WelcomePage.welcomeTitle": "Добро пожаловать, {name}!",
+  "WelcomePage.subtitle": "Вы успешно присоединились к YouDu. Вот как начать работу:",
+  "WelcomePage.providerGuideTitle": "Как создать своё первое задание",
+  "WelcomePage.providerStep1Title": "Создайте подробное задание",
+  "WelcomePage.providerStep1Description": "Опишите, что вам нужно, укажите бюджет, добавьте фото и отметьте локацию на карте.",
+  "WelcomePage.providerStep2Title": "Получите предложения от специалистов",
+  "WelcomePage.providerStep2Description": "Верифицированные исполнители пришлют свои предложения с ценами и сроками. Сравните и выберите лучшее.",
+  "WelcomePage.providerStep3Title": "Управляйте заданием",
+  "WelcomePage.providerStep3Description": "Общайтесь в чате, отслеживайте прогресс и оставьте отзыв после завершения.",
+  "WelcomePage.customerGuideTitle": "Как найти задания",
+  "WelcomePage.customerStep1Title": "Просматривайте доступные задания",
+  "WelcomePage.customerStep1Description": "Изучайте задания в ваших категориях услуг. Используйте фильтры для поиска подходящих заданий.",
+  "WelcomePage.customerStep2Title": "Отправьте своё предложение",
+  "WelcomePage.customerStep2Description": "Предложите свою цену и сроки. Верифицированные специалисты имеют приоритет, поэтому пройдите верификацию!",
+  "WelcomePage.customerStep3Title": "Получите задание и выполните его",
+  "WelcomePage.customerStep3Description": "После выбора общайтесь с заказчиком, выполняйте работу и получайте оплату и отзывы.",
+  "WelcomePage.createFirstTask": "Создать первое задание",
+  "WelcomePage.viewMyTasks": "Посмотреть мои задания",
+  "WelcomePage.findTasks": "Найти задания",
+  "WelcomePage.completeProfile": "Заполнить профиль",
+  "WelcomePage.skipToHome": "Перейти на главную"
 }
