Complete portfolio with verified transactions integration

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1401,6 +1401,8 @@
   "WelcomePage.skipToHome": "Skip to homepage",
   "ProfilePage.portfolioTitle": "Portfolio ({count})",
   "ProfilePage.portfolioCompletedOn": "Completed on {date}",
+  "ProfilePage.completedTasksTitle": "Completed tasks ({count})",
+  "ProfilePage.emptyCompletedTasks": "Completed tasks will appear here after finishing your first jobs.",
   "AddPortfolioModal.title": "Add work to portfolio",
   "AddPortfolioModal.imagesLabel": "Photos of completed work",
   "AddPortfolioModal.uploadPlaceholder": "Click to upload photos",
@@ -1433,6 +1435,13 @@
   "PortfolioSection.noImages": "Please select at least one photo",
   "PortfolioSection.uploadFailed": "Failed to upload. Please try again.",
   "PortfolioSection.untitledWork": "Completed work",
+  "PortfolioSection.selectCompletedWork": "Link to completed task",
+  "PortfolioSection.selectWorkPlaceholder": "Select a completed task...",
+  "PortfolioSection.selectWorkHint": "Select a task to verify this work and auto-fill the title",
+  "PortfolioSection.optional": "optional",
+  "PortfolioSection.noCompletedWorks": "No completed tasks yet",
+  "PortfolioSection.noCompletedWorksHint": "Complete your first task to add it to your portfolio and attract more clients",
+  "PortfolioSection.transactionRequired": "Please select a completed task to link this portfolio work",
   "AddPortfolioSection.title": "Add this work to your portfolio",
   "AddPortfolioSection.promptText": "Showcase this completed work in your profile to attract more clients.",
   "AddPortfolioSection.showFormButton": "Add to portfolio",
