--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1435,6 +1435,8 @@
   "WelcomePage.skipToHome": "Перейти на главную",
   "ProfilePage.portfolioTitle": "Портфолио ({count})",
   "ProfilePage.portfolioCompletedOn": "Выполнено {date}",
+  "ProfilePage.completedTasksTitle": "Выполненные задания ({count})",
+  "ProfilePage.emptyCompletedTasks": "Выполненные задания появятся здесь после завершения первых работ.",
   "AddPortfolioModal.title": "Добавить работу в портфолио",
   "AddPortfolioModal.imagesLabel": "Фотографии выполненной работы",
   "AddPortfolioModal.uploadPlaceholder": "Нажмите для загрузки фото",
@@ -1467,6 +1469,13 @@
   "PortfolioSection.noImages": "Выберите хотя бы одно фото",
   "PortfolioSection.uploadFailed": "Не удалось загрузить. Попробуйте ещё раз.",
   "PortfolioSection.untitledWork": "Выполненная работа",
+  "PortfolioSection.selectCompletedWork": "Привязать к выполненному заданию",
+  "PortfolioSection.selectWorkPlaceholder": "Выберите завершённое задание...",
+  "PortfolioSection.selectWorkHint": "Выберите задание для верификации работы и автозаполнения названия",
+  "PortfolioSection.optional": "необязательно",
+  "PortfolioSection.noCompletedWorks": "Пока нет выполненных заданий",
+  "PortfolioSection.noCompletedWorksHint": "Завершите первое задание, чтобы добавить его в портфолио и привлечь больше клиентов",
+  "PortfolioSection.transactionRequired": "Пожалуйста, выберите выполненное задание для привязки этой работы",
   "AddPortfolioSection.title": "Добавить эту работу в портфолио",
   "AddPortfolioSection.promptText": "Покажите эту выполненную работу в профиле, чтобы привлечь больше клиентов.",
   "AddPortfolioSection.showFormButton": "Добавить в портфолио",
