✨ Синхронизация категорий с Sharetribe и улучшение UI регистрации
🔧 Основные изменения:
- Синхронизированы все 14 категорий и 92 подкатегории с Sharetribe Console
- Обновлены ID категорий в serviceCategories.js (repairs_main, Beauty_health, и т.д.)
- Обновлены ссылки на категории на главной странице

🎨 UI улучшения:
- Адаптирован ServiceCategorySelector под стиль YouDu
- Компактный дизайн карточек категорий
- Эмодзи-иконки для категорий
- Простые чекбоксы для выбора подкатегорий (без hover эффектов)
- Добавлен SubcategoryFilter для страницы категорий

⚡ Оптимизация:
- Lazy loading для Stripe и Google Maps
- Удалены debug логи
- Удалены компоненты портфолио (отменены изменения)

📝 Файлы:
- src/config/serviceCategories.js - полная синхронизация с Console
- src/components/ServiceCategorySelector/* - новый UI
- src/components/SubcategoryFilter/* - фильтр подкатегорий
- src/containers/LandingPage/LandingPage.js - обновлены ID категорий
- src/hooks/useStripe.js, useGoogleMaps.js - lazy loading хуки
- src/util/loadScript.js - утилита для динамической загрузки скриптов

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -811,7 +811,7 @@
   "ProfilePage.completedListingsTitle": "Completed jobs ({count})",
   "ProfilePage.rating": "Profile rating",
   "ProfilePage.completedTasks": "Completed jobs",
-  "ProfilePage.proposedTasks": "Jobs you posted",
+  "ProfilePage.proposedTasks": "Completed tasks",
   "ProfilePage.emptyOpenListings": "Your active jobs will appear here once you publish a request.",
   "ProfilePage.emptyCompletedListings": "Completed jobs will show up here after you finish your first tasks.",
   "ProfilePage.loadingDataFailed": "Oops, something went wrong. Please try again.",
@@ -1299,6 +1299,10 @@
   "TransactionPage.completeTaskError": "Failed to close the task. Please try again.",
   "CategoryExecutorsPage.noExecutorsTitle": "No executors found",
   "CategoryExecutorsPage.noExecutorsMessage": "Sorry, we couldn't find executors in this category at the moment. We will find executors for your request soon.",
+  "CategoryExecutorsPage.noExecutorsInSubcategory": "No executors with selected specialization",
+  "CategoryExecutorsPage.tryAnotherSubcategory": "Try selecting another specialization or view all executors in the category",
+  "CategoryExecutorsPage.filterBySpecialization": "Filter by specialization",
+  "CategoryExecutorsPage.all": "All",
   "CategoryExecutorsPage.errorTitle": "Unable to load executors",
   "CategoryExecutorsPage.errorMessage": "Sorry, we couldn't find executors in this category at the moment. We will find executors for your request soon.",
   "TopbarCustom.aboutCompany": "About Company",
@@ -1359,6 +1363,10 @@
   "FooterCustom.copyright": "© {year}. All rights reserved.",
   "ServiceCategory.title": "Service Categories",
   "ServiceCategory.selectServices": "Choose which services you provide",
+  "ServiceCategory.selectDescription": "Select categories and specify your specialization for each",
+  "ServiceCategory.chooseSpecialization": "Choose specialization",
+  "ServiceCategory.selected": "selected",
+  "ServiceCategory.selectedCategories": "Categories selected",
   "ServiceCategory.requiredMessage": "Please select at least one service category",
   "ServiceCategory.placeholder": "Select categories...",
   "ServiceCategory.construction": "Construction and Repair",
