--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -814,7 +814,7 @@
   "ProfilePage.mobileHeading": "{name}",
   "ProfilePage.rating": "Рейтинг профиля",
   "ProfilePage.completedTasks": "Количество выполненных работ",
-  "ProfilePage.proposedTasks": "Количество предложенных заданий",
+  "ProfilePage.proposedTasks": "Завершённые задания",
   "ProfilePage.emptyOpenListings": "Здесь будут отображаться активные задания. Создайте новое задание, чтобы найти исполнителя.",
   "ProfilePage.emptyCompletedListings": "Завершённые задания появятся здесь после закрытия первых работ.",
   "ProfilePage.memberSince": "Дата регистрации",
@@ -1317,6 +1317,10 @@
   "TransactionPage.completeTaskError": "Не удалось закрыть задание. Попробуйте еще раз.",
   "CategoryExecutorsPage.noExecutorsTitle": "Исполнители не найдены",
   "CategoryExecutorsPage.noExecutorsMessage": "Извините, на данный момент исполнители по Вашей категории не найдены. В скором времени мы найдем исполнителей по Вашему запросу.",
+  "CategoryExecutorsPage.noExecutorsInSubcategory": "Нет исполнителей с выбранной специализацией",
+  "CategoryExecutorsPage.tryAnotherSubcategory": "Попробуйте выбрать другую специализацию или просмотрите всех исполнителей в категории",
+  "CategoryExecutorsPage.filterBySpecialization": "Фильтр по специализации",
+  "CategoryExecutorsPage.all": "Все",
   "CategoryExecutorsPage.errorTitle": "Не удалось загрузить исполнителей",
   "CategoryExecutorsPage.errorMessage": "Извините, на данный момент исполнители по Вашей категории не найдены. В скором времени мы найдем исполнителей по Вашему запросу.",
   "TransactionPage.assignment-flow-v3.customer.reviewed-by-customer.title": "Спасибо за отзыв!",
@@ -1393,6 +1397,10 @@
   "FooterCustom.copyright": "© {year}. Все права защищены.",
   "ServiceCategory.title": "Категории услуг",
   "ServiceCategory.selectServices": "Выберите какие услуги Вы предоставляете",
+  "ServiceCategory.selectDescription": "Выберите категории и укажите специализацию для каждой",
+  "ServiceCategory.chooseSpecialization": "Выберите специализацию",
+  "ServiceCategory.selected": "выбрано",
+  "ServiceCategory.selectedCategories": "Выбрано категорий",
   "ServiceCategory.requiredMessage": "Выберите хотя бы одну категорию услуг",
   "ServiceCategory.placeholder": "Выберите категории...",
   "ServiceCategory.construction": "Строительство и ремонт",
