✨ Добавлено отображение подкатегорий в профиле и настройках
Реализовано:
1. Публичный профиль (/u/{id}):
   ✅ Создан SectionServiceCategories компонент
   ✅ Показывает категории с галочкой ✓
   ✅ Под каждой категорией - pill-кнопки с подкатегориями
   ✅ Десериализация subcategories из JSON-строки
   ✅ Локализация через getCategoryLabel/getSubcategoryLabel

2. Настройки профиля (/profile-settings):
   ✅ Добавлен ServiceCategorySelector для Customer
   ✅ Можно редактировать категории и подкатегории
   ✅ Используется та же красивая UI форма что и при регистрации

3. Переводы:
   ✅ ProfilePage.serviceCategoriesTitle (ru/en)

Файлы:
+ src/containers/ProfilePage/SectionServiceCategories.js (новый)
- src/containers/ProfilePage/ProfilePage.module.css (стили)
- src/containers/ProfilePage/ProfilePage.js (импорт + интеграция)
- src/containers/ProfileSettingsPage/ProfileSettingsForm/ProfileSettingsForm.js
- src/translations/ru.json
- src/translations/en.json

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -819,6 +819,7 @@
   "ProfilePage.mobileHeading": "{name}",
   "ProfilePage.reviewsAsACustomerTitle": "Reviews as a customer ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Reviews from customers ({count})",
+  "ProfilePage.serviceCategoriesTitle": "Service Categories",
   "ProfilePage.schemaTitle": "{name} | {marketplaceName}",
   "ProfileSettingsForm.addYourProfilePicture": "+ Add your profile picture…",
   "ProfileSettingsForm.addYourProfilePictureMobile": "+ Add",
