🔧 ФИКС: Убрано поле 'Подкатегории [object Object]' + переводы
Проблема:
- В /profile-settings отображалось лишнее поле 'Подкатегории: [object Object]'
- Некоторые переводы были пустые

Решение:
✅ Добавлена фильтрация subcategories (pub_subcategories) в ProfileSettingsForm
✅ Теперь subcategories управляются только через ServiceCategorySelector

Переводы (ru/en):
✅ ProfileSettingsForm.yourName: 'Данные профиля' / 'Profile Data'
✅ ProfileSettingsForm.displayNameLabel: 'Введите данные Вашей организации или публикуемое имя' / 'Enter your organization name or public display name'
✅ ProfileSettingsForm.bioLabel: 'Ваше публикуемое описание в профиле' / 'Your public profile description'

Файлы:
- src/containers/ProfileSettingsPage/ProfileSettingsForm/ProfileSettingsForm.js
- src/translations/ru.json
- src/translations/en.json

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -825,12 +825,12 @@
   "ProfileSettingsForm.addYourProfilePictureMobile": "+ Add",
   "ProfileSettingsForm.bioHeading": "Your profile bio",
   "ProfileSettingsForm.bioInfo": "{marketplaceName} is built on relationships. Help other people get to know you.",
-  "ProfileSettingsForm.bioLabel": "Bio",
+  "ProfileSettingsForm.bioLabel": "Your public profile description",
   "ProfileSettingsForm.bioPlaceholder": "Tell us a little bit about yourself…",
   "ProfileSettingsForm.changeAvatar": "Change",
   "ProfileSettingsForm.displayNameHeading": "Your display name",
   "ProfileSettingsForm.displayNameInfo": "The display name defaults to first name plus initial of last name.",
-  "ProfileSettingsForm.displayNameLabel": "Display name",
+  "ProfileSettingsForm.displayNameLabel": "Enter your organization name or public display name",
   "ProfileSettingsForm.displayNamePlaceholder": "Jane D",
   "ProfileSettingsForm.displayNameRequired": "This field is required.",
   "ProfileSettingsForm.fileInfo": ".JPG or .PNG. Max. 20 MB",
@@ -845,7 +845,7 @@
   "ProfileSettingsForm.saveChanges": "Save changes",
   "ProfileSettingsForm.tip": "Tip: Use a photo where your face is recognizable.",
   "ProfileSettingsForm.updateProfileFailed": "Oops, something went wrong. Please try again.",
-  "ProfileSettingsForm.yourName": "Your name",
+  "ProfileSettingsForm.yourName": "Profile Data",
   "ProfileSettingsForm.yourProfilePicture": "Your profile picture",
 "ProfileSettingsForm.socialNetwork": "Social network",
 "ProfileSettingsForm.socialInstagram": "Instagram",
