--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -826,12 +826,12 @@
 "ProfileSettingsForm.addYourProfilePictureMobile": "+ Добавить",
 "ProfileSettingsForm.bioHeading": "Описание вашего профиля",
 "ProfileSettingsForm.bioInfo": "Торговая площадка {marketplaceName} основана на взаимоотношениях. Помогайте другим людям лучше узнать вас.",
-"ProfileSettingsForm.bioLabel": "",
+"ProfileSettingsForm.bioLabel": "Ваше публикуемое описание в профиле",
 "ProfileSettingsForm.bioPlaceholder": "Расскажите нам немного о себе…",
   "ProfileSettingsForm.changeAvatar": "Change",
 "ProfileSettingsForm.displayNameHeading": "Организация или никнейм",
 "ProfileSettingsForm.displayNameInfo": "Отображаемое имя по умолчанию равно имени плюс инициалу фамилии.",
-"ProfileSettingsForm.displayNameLabel": "",
+"ProfileSettingsForm.displayNameLabel": "Введите данные Вашей организации или публикуемое имя",
 "ProfileSettingsForm.displayNamePlaceholder": "Иван И",
   "ProfileSettingsForm.displayNameRequired": "This field is required.",
 "ProfileSettingsForm.fileInfo": ".JPG или .PNG. Размер не более 20 МБ",
@@ -846,7 +846,7 @@
 "ProfileSettingsForm.saveChanges": "Сохранить изменения",
 "ProfileSettingsForm.tip": "Совет: используйте фотографию, на которой ваше лицо узнаваемо.",
   "ProfileSettingsForm.updateProfileFailed": "Oops, something went wrong. Please try again.",
-"ProfileSettingsForm.yourName": "",
+"ProfileSettingsForm.yourName": "Данные профиля",
 "ProfileSettingsForm.yourProfilePicture": "Ваша фотография в профиле",
 "ProfileSettingsForm.socialNetwork": "Социальные сети",
 "ProfileSettingsForm.socialInstagram": "Instagram",
